# thesis

./: .gitattributes  .gitignore  check.py  predict.py  pyproject.toml  requirements.txt  run_fedrag.sh
configs/: 1.toml
src/: medrag.py  mirage.py  utils.py
src/fedrag/: client_app.py  llm_querier.py  retriever.py  retriever.yaml  server_app.py  task.py
src/mirage/: evaluate.py
